Moved to dotnetcore 2 and it's a mess

--- a/WhoseTurnIsIt.fsproj
+++ b/WhoseTurnIsIt.fsproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="microsoft.net.sdk.functions" Version="1.0.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.0.0" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.6" />
+    <PackageReference Include="System.Configuration" Version="2.0.5" />
   </ItemGroup>
 
   <ItemGroup>
