--- a/src/WhoseTurnIsIt.fsproj
+++ b/src/WhoseTurnIsIt.fsproj
@@ -21,6 +21,7 @@
   
   <ItemGroup>
     <Compile Include="WhoseTurnIsIt.fs" />
+    <Compile Include="DialogFlow/DialogFlow.fs" />
     <Compile Include="IncomingWebHook/run.fs" />
     <None Include="Script.fsx" />
   </ItemGroup>
