--- a/src/WhoseTurnIsIt.fsproj
+++ b/src/WhoseTurnIsIt.fsproj
@@ -1,13 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-  
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFramework>net461</TargetFramework>
-    <DebugType>portable</DebugType>
   </PropertyGroup>
-  
+
   <ItemGroup>
+    <Compile Include="Model/Model.fs" />
+    <Compile Include="WhoPickedWhat/run.fs" />
+    
     <Content Include="WhoPickedWhat/function.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -18,11 +18,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  
-  <ItemGroup>
-    <Compile Include="Model/Model.fs" />
-    <Compile Include="WhoPickedWhat/run.fs" />
-  </ItemGroup>
 
+  <ItemGroup>
+    <!-- <Reference Include="System.Configuration" /> -->
+  </ItemGroup>
+  
   <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
